# northstar

./: .gitignore  README.md  SOTA.md  agents.md  main.py  prompts-design.md  pyproject.toml  review.md  test.py
dashboard/: .env.local.example  evals_redesign.md  implementation_plan.md  middleware.ts  next.config.js  northstar_create_project_placement.html  northstar_evals_graders.html  northstar_page_designs.html  northstar_settings_critique.html  northstar_trace_inspector.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  traces-page.html  tsconfig.json
examples/: agent_run.py  cost_tracking.py  litellm_service.py
migrations/: 001_initial_schema.sql  002_sessions.sql  003_runs.sql  004_spans.sql  005_events.sql  006_ingest_rpc.sql  007_ingest_hardening.sql  008_one_api_key_per_project.sql  009_fix_request_project_id_search_path.sql  010_create_project_api_key_rpc.sql  011_repair_project_api_key_rpc.sql  012_dashboard_read_model.sql  013_trace_event_read_model.sql  014_tool_event_read_compatibility.sql  015_expose_trace_errors.sql  016_run_cost_read_model.sql  017_eval_datasets.sql  018_eval_dataset_privileges.sql  019_eval_runs.sql  020_update_eval_datasets.sql  021_project_provider_keys.sql  022_trace_spans_read_model.sql  023_session_errored_count.sql  024_alert_rules_and_webhooks.sql  025_prompts.sql  026_scores_feedback.sql
supabase/: config.toml
tests/: conftest.py  test_end_to_end.py  test_evals.py  test_instrumentation.py  test_models.py  test_northstar.py  test_pricing.py  test_prompts.py  test_public_api.py  (+3 more)
(+173 files in other folders)
